--- a/index.html
+++ b/index.html
@@ -2,21 +2,31 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Aluno Rayssa Kamille</title>
+    <title>Professor Jesus</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-    <div class="MenuPrincipal">
+    <div class="menuPrincipal">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pagina01.html">Pagina 1</a></li>
-          <li><a href="pagina02.html">Pagina 2</a></li>
+          <li><a href="paginao1.html">Segundo Ano</a></li>
+          <li><a href="pagina02.html">Terceiro Ano</a></li>
         </ul>
       </nav>
-
     </div>
-    <h1>Rayssa Kamille </h1>
-    <p>1C        Numero:32</p>
+ 
+<div class="conteudo">
+ <h1>SEGUNDA GUERRA MUNDIAL - COMEÇO</h1>
+
+ <h2>Primeiro Ano</h2>
+
+</div>
+
+<div class="rodape">
+  Aluno: Rayssa e Esther - N - 32 e 10 - Primeiro C
+</div>
+
+
   </body>
 </html>
