--- a/pagina01.html
+++ b/pagina01.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="MenuPrincipal">
-        <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Pagina 1</a></li>
-              <li><a href="pagina02.html">Pagina 2</a></li>
-            </ul>
-          </nav>
+  <div class="menuPrincipal">
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pagina01.html">Segundo Ano</a></li>
+          <li><a href="pagina02.html">Terceiro Ano</a></li>
+        </ul>
+      </nav>
+  </div>
+    <div class="imgEstudo">
+       <img id="aguia" src="aguia.png" alt="">
     </div>
-
 </body>
 </html>
