--- a/pagina02.html
+++ b/pagina02.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="MenuPricipal">
+    <div class="menuPrincipal">
         <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Pagina 1</a></li>
-              <li><a href="pagina02.html">Pagina 2</a></li>
+              <li><a href="pagina01.html">Segundo Ano</a></li>
+              <li><a href="pagina02.html">Terceiro Ano</a></li>
             </ul>
           </nav>
     </div>
-
 </body>
 </html>
