--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="paginao1.html">Segundo Ano</a></li>
+          <li><a href="pagina01.html">Segundo Ano</a></li>
           <li><a href="pagina02.html">Terceiro Ano</a></li>
         </ul>
       </nav>
     </div>
  
 <div class="conteudo">
- <h1>SEGUNDA GUERRA MUNDIAL - COMEÇO</h1>
+ <h1>VINGADORES GUERRA INFINITA </h1>
 
  <h2>Primeiro Ano</h2>
 
