--- a/pagina01.html
+++ b/pagina01.html
@@ -11,14 +11,21 @@
   <div class="menuPrincipal">
     <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pagina01.html">Segundo Ano</a></li>
-          <li><a href="pagina02.html">Terceiro Ano</a></li>
+          <li><a href="index.html">Desenvolvimento</li>
+          <li><a href="pagina01.html"></a></li>
+          <li><a href="pagina02.html"></a></li>
         </ul>
       </nav>
   </div>
-    <div class="imgEstudo">
-       <img id="aguia" src="aguia.png" alt="">
+    <div class="vingadores2">
+       <img id="vingadores2" src="vingadores2.webp" alt="">
+    </div>
+    <div>
+      Vingadores: Guerra Infinita. A abertura começa com Thanos (Josh Brolin) massacrando os sobreviventes de Asgard. Quando tudo parece estar perdido para Thor (Chris Hemsworth) e Loki (Tom Hiddleston), Hulk (Mark Ruffalo) surge dos escombros e parte para cima do vilão. O problema? Ele perde e quase morre no processo.
+
+A pergunta que atormenta os fãs é: como isso aconteceu? Os diretores Joe e Anthony Russo revelaram, em entrevista ao Collider, o fator determinante para que o Titã Louco derrotasse o enorme monstro verde:
+
+"Eu diria apenas que ele é poderoso. Você não o vê usando a Joia do Poder no combate. Eu penso pelo jeito como vimos a luta e também como falamos com a equipe de dublês, em que Hulk é obviamente mais poderoso, mas não pensa muito quando luta. É agressivo, sai esmurrando. Já Thanos é o Ghengis Kahn do universo, um lutador muito bem treinado, igualmente forte. Então quando você coloca esses dois lutando, o mais habilidoso vai vencer".
     </div>
 </body>
-</html>
+</h
