--- a/pagina02.html
+++ b/pagina02.html
@@ -11,9 +11,9 @@
     <div class="menuPrincipal">
         <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Segundo Ano</a></li>
-              <li><a href="pagina02.html">Terceiro Ano</a></li>
+              <li><a href="index.html">Fim</a></li>
+              <li><a href="pagina01.html"></a></li>
+              <li><a href="pagina02.html"></a></li>
             </ul>
           </nav>
     </div>
